# flink-tank

./: .gitignore  KCAT_USAGE.md  README.md  create-infra.sh  deploy-job.sh  portforward-ui.sh
flink-job/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
flink-job/src/main/kotlin/com/example/flink/: EventProcessorJob.kt
flink-job/src/test/kotlin/com/example/flink/: EventProcessorJobTest.kt
jobs/: build.gradle.kts  settings.gradle.kts
jobs/common/: build.gradle.kts
jobs/common/src/main/kotlin/com/example/events/: Events.kt
jobs/flink-job/: .dockerignore  .gitignore  Dockerfile  build.gradle.kts
jobs/flink-job/src/main/kotlin/com/example/flink/: AggregationJob.kt  EventProcessorJob.kt
jobs/producer/: Dockerfile  build.gradle.kts
jobs/producer/src/main/kotlin/com/example/producer/: EventProducer.kt
k8s/: kcat-deployment.yaml
k8s/flink/: README.md  aggregation-job.yaml  event-processor-job.yaml  jar-server.yaml  session-cluster.yaml
k8s/producer/: event-producer.yaml
k8s/tools/: kcat-deployment.yaml
k8s/topics/: README.md  aggregated-metrics.yaml  error-events.yaml  input-events.yaml  output-results.yaml
kafka-tools/: README.md  kcat_cli.py  ktool.py  pyproject.toml  sample-events.json  sample-events.md
topics/: README.md  output-results.yaml
